# interpreter

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  requirements.txt
.github/workflows/: c-cpp.yml
include/plorth/: config.hpp.in  context.hpp  dictionary.hpp  io-input.hpp  io-output.hpp  io.hpp  json.hpp  memory.hpp  module.hpp  plorth.hpp  runtime.hpp  unicode.hpp  value-array.hpp  value-boolean.hpp  value-error.hpp  value-number.hpp  value-object.hpp  value-quote.hpp  value-string.hpp  value-symbol.hpp  value-word.hpp  value.hpp  version.hpp
include/plorth/io/: input.hpp  output.hpp
include/plorth/value/: array.hpp  base.hpp  boolean.hpp  error.hpp  null.hpp  number.hpp  object.hpp  quote.hpp  string.hpp  symbol.hpp  visitor.hpp  word.hpp
src/: compiler.cpp  context.cpp  eval.cpp  exec.cpp  globals.cpp  io-input.cpp  io-output.cpp  json.cpp  module.cpp  runtime.cpp  unicode.cpp  utils.cpp  utils.hpp  value-error.cpp  value-object.cpp  value-string.cpp  value-symbol.cpp  value.cpp
src/api/: array.cpp  boolean.cpp  error.cpp  global.cpp  number.cpp  object.cpp  quote.cpp  string.cpp  symbol.cpp  word.cpp
src/value/: array.cpp  base.cpp  boolean.cpp  error.cpp  null.cpp  number.cpp  object.cpp  quote.cpp  string.cpp  symbol.cpp  word.cpp
test/: CMakeLists.txt  test_compile.cpp  test_context.cpp  test_exec.cpp
